доробив свою підсекцію в хіро
доробив свою підсекцію в хіро

--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -44,35 +44,41 @@
         </li>
     </ul>
     <div class="hero__right-part">
-        <picture class="about__picture">
-        <source
-          media="(min-width: 1280px)"
-          srcset="
+        <div class="hero__numbers">
+            <div class="hero__number-cafes">
+                <h4 class="hero__number">16</h4>
+                <p class="hero__cafes">cafes</p>
+            </div>
+            <div class="hero__number-food">
+                <h4 class="hero__number">23</h4>
+                <p class="hero__cafes">food-trucks</p>
+            </div>
+        </div>
+        <picture class="hero__girl-picture">
+        <source 
+        media="(min-width: 1280px)" 
+        srcset="
             images/hero-header/girl-desktop@x1.webp 1x,
-            images/hero-header/girl-desktop@x2.webp 2x
-          "
-          type="image/webp" />
-        <source
-          media="(min-width: 1280px)"
-          srcset="
+            images/hero-header/girl-desktop@x2.webp 2x" 
+            type="image/webp" />
+        <source 
+        media="(min-width: 1280px)" 
+        srcset="
             images/hero-header/girl-desktop@x1.png 1x,
-            images/hero-header/girl-desktop@x2.png 2x
-          " />
-        <source
-          media="(min-width: 768px)"
-          srcset="
+            images/hero-header/girl-desktop@x2.png 2x" />
+        <source 
+        media="(min-width: 768px)" 
+        srcset="
             images/hero-header/girl-tablet@x1.webp 1x,
-            images/hero-header/girl-tablet@x2.webp 2x
-          "
-          type="image/webp" />
-        <source
-          media="(min-width: 768px)"
-          srcset="
+            images/hero-header/girl-tablet@x2.webp 2x" 
+            type="image/webp" />
+        <source 
+        media="(min-width: 768px)" 
+        srcset="
             images/hero-header/girl-tablet@x2.png 1x,
-            images/hero-header/girl-tablet@x2.png 2x
-          " />
-        <img class="hero__girl" src="images/hero-header/girl-tablet@x1.png" alt="дівчина"
-      /></picture>
+            images/hero-header/girl-tablet@x2.png 2x" />
+        <img class="hero__girl-img" src="images/hero-header/girl-tablet@x1.png" alt="дівчина" 
+        /></picture>
     </div>
 
 </section>
