--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,5 +1,5 @@
-<section class="reviews-section container">
-  
+<section class="customer-reviews">
+  <div class="container">
     <h2 class="visually-hidden">Customer reviews</h2>
     <!-- <ul class="reviews-set"> -->
       <li class="reviews-list">
@@ -64,5 +64,5 @@
       </li>
 
     </ul> -->
-  
+  </div>
 </section>
