--- a/src/sass/components/_customer-reviews.scss
+++ b/src/sass/components/_customer-reviews.scss
@@ -2,16 +2,13 @@
   
   display: block;
   text-align: center;
-  max-widtn: 280px;
   margin-top: 80px;
   margin-bottom: 86px;
   @media screen and (min-width: $tablet) {
-  width: 620px;
   margin-top: 121px;
   margin-bottom: 119px;
 }
 @media screen and (min-width: $desktop) {
-  width: 926px;
   margin-top: 123px;
   margin-bottom: 132px;
 }
@@ -30,7 +27,7 @@
 }
 
 .review-text{
-  display: inline-block;
+  display: block;
   font-size: 12px;
   line-height: 2.55;
   text-align: $text-color-black;
@@ -45,6 +42,8 @@
 
   margin-bottom: 50px;
   position: relative;
+  margin-left: auto;
+  margin-right: auto;
 
 @media screen and (max-width: 767px) {
   
