--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,7 +1,7 @@
-<section class="customer-reviews">
+<section class="reviews-section">
   <div class="container">
     <h2 class="visually-hidden">Customer reviews</h2>
-    <!-- <ul class="reviews-set"> -->
+    <ul class="reviews-set">
       <li class="reviews-list">
         <article>
         <div class="customer-photo">
