--- a/src/sass/components/_customer-reviews.scss
+++ b/src/sass/components/_customer-reviews.scss
@@ -23,6 +23,7 @@
 }
 @media screen and (min-width: $desktop) {
   margin-bottom: 15px;
+  
 }
 }
 
@@ -30,7 +31,7 @@
   display: block;
   font-size: 12px;
   line-height: 2.55;
-  text-align: $text-color-black;
+  text-align: center;
   background-color: #FAFAFA;
   
   
@@ -136,6 +137,7 @@
 .customer-info{
   font-size: 14px;
   line-height: 1.86;
+  text-align: center;
   margin-bottom: 30px;
   @media screen and (min-width: $tablet) {
     font-size: 16px;
@@ -146,4 +148,8 @@
     font-size: 20px;
   }
 }
-
+.review-icon{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
