--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,3 +1,150 @@
 .page-footer {
   background-color: $background-pink;
 }
+
+.footer__container {
+  @media screen and (min-width: $tablet) {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: baseline;
+    justify-content: space-between;
+  }
+  @media screen and (min-width: $desktop) {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+    margin-bottom: 98px;
+  }
+}
+
+.footer__info {
+  width: 232px;
+  @media screen and (min-width: $tablet) {
+    width: 340px;
+  }
+  @media screen and (min-width: $desktop) {
+    width: 477px;
+  }
+}
+
+.section__label--position {
+  margin-bottom: 17px;
+  text-align: start;
+}
+
+.section__title--position {
+  margin-bottom: 23px;
+  text-align: start;
+  @media screen and (min-width: $tablet) {
+    margin-bottom: 91px;
+  }
+  @media screen and (min-width: $desktop) {
+    margin-bottom: 0;
+  }
+}
+
+// social
+
+.footer__social {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 46px;
+  @media screen and (min-width: $desktop) {
+    margin-bottom: 50px;
+  }
+}
+
+.footer__list {
+  display: flex;
+}
+
+.footer__item {
+  width: 32px;
+  height: 32px;
+  @media screen and (min-width: $tablet) {
+    width: 34px;
+    height: 34px;
+  }
+}
+
+.footer__item:not(:last-child) {
+  margin-right: 29px;
+}
+
+.footer__link {
+  width: 100%;
+  height: 100%;
+  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background: #fea5bb;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    background: $text-color-red;
+  }
+}
+
+// contact
+
+.footer__contact {
+  display: flex;
+  justify-content: flex-end;
+  align-items: stretch;
+  margin-bottom: 43px;
+  @media screen and (min-width: $tablet) {
+    margin-bottom: 0;
+  }
+  @media screen and (min-width: $desktop) {
+    margin-bottom: 0;
+  }
+}
+
+.footer__contact--text {
+  color: $text-color-black;
+}
+
+.footer__contact--tel {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 1.83;
+  color: $text-color-red;
+  @media screen and (min-width: $tablet) {
+    font-size: 14px;
+    line-height: 1.85;
+    letter-spacing: 0.02em;
+  }
+  @media screen and (min-width: $desktop) {
+    font-size: 16px;
+    line-height: 1.87;
+    letter-spacing: 0.02em;
+  }
+}
+
+.copyrights {
+  display: flex;
+  justify-content: space-around;
+  border-top: 1px solid #e1e1e1;
+}
+
+.copyrights__text {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.5;
+  text-align: center;
+  color: #907e82;
+  width: 150px;
+  padding-top: 22px;
+  padding-bottom: 25px;
+  @media screen and (min-width: $tablet) {
+    width: 100%;
+    font-size: 14px;
+    line-height: 1.85;
+    letter-spacing: 0.02em;
+  }
+}
