--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -22,3 +22,4 @@
 @import './components/customer-reviews';
 @import './components/contacts';
 @import './components/footer';
+@import './components/about-modal';
