--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -59,3 +59,10 @@
     <p class="copyrights__text">&copy; 2019 - IceCream. All Rights Reserved.</p>
   </div>
 </footer>
+    </div>
+  </div>
+
+  <div class="copyrights">
+    <p class="copyrights__text">&copy; 2019 - IceCream. All Rights Reserved.</p>
+  </div>
+</footer>
