закінчує модальне вікно
закінчує модальне вікно

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -67,11 +67,20 @@
   </div>
 </section>
 <div class="backdrop is-hidden" about-modal>
-  <div class="modal">
+  <div class="about-modal">
     <button type="button" class="modal__btn--close" about-modal-close>
       <svg class="modal__icon--close" width="18" height="18">
         <use href="images/sprites.svg#close"></use>
       </svg>
     </button>
+    <h4 class="about__label-modal">Only hand made</h4>
+    <picture class="about__picture">
+      <source srcset="images/about-images/hand-made.webp" type="image/webp" />
+      <source srcset="images/about-images/hand-made.jpg" />
+      <img class="about__img-modal" src="images/about-images/cow-mobile@1x.png" alt="корова и молоко"
+    /></picture>
+      <p class="about__text-modal">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum dolorem minima consequuntur iusto commodi minus nesciunt odit, autem qui inventore omnis vel quis placeat, explicabo ab. Doloremque aperiam atque sapiente.
+      </p>
   </div>
 </div>
