--- a/src/sass/components/_about-modal.scss
+++ b/src/sass/components/_about-modal.scss
@@ -14,13 +14,13 @@
   pointer-events: none;
 }
 
-.modal {
+.about-modal {
   position: absolute;
   width: calc(100% - 30px);
-  background-color: $background-white;
+  background-color: $background-pink;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
+  border-radius: 20px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -28,8 +28,11 @@
   @media screen and (min-width: 480px) {
     width: 450px;
   }
+  @media screen and (min-width: 768px) {
+    width: 620px;
+  }
   @media screen and (min-width: 1200px) {
-    width: 528px;
+    width: 720px;
   }
 }
 
@@ -39,7 +42,7 @@
   background-color: transparent;
   width: 30px;
   height: 30px;
-  border-radius: 50%;
+  border-radius: 100%;
   top: 8px;
   right: 8px;
   display: flex;
@@ -50,6 +53,64 @@
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
-    color: var(--accent-color);
+    color: $text-color-red;
+  }
+}
+
+.about__label-modal {
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.17;
+  text-align: center;
+  text-transform: uppercase;
+  color: $text-color-red;
+  margin-bottom: 20px;
+  @media screen and (min-width: $tablet) {
+    font-size: 26px;
+    line-height: 1.15;
+  }
+  @media screen and (min-width: $desktop) {
+    font-size: 30px;
+    line-height: 1.13;
+    letter-spacing: 0.04em;
+  }
+}
+
+.about__img-modal {
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 22px;
+  @media screen and (max-width: 768px) {
+    max-width: 250px;
+  }
+  @media screen and (min-width: 768px) {
+    max-width: 450px;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 500px;
+  }
+}
+
+.about__text-modal {
+  max-width: 220px;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 8px;
+  line-height: 1.62;
+  margin-top: 30px;
+  @media screen and (min-width: $tablet) {
+    max-width: 380px;
+    font-size: 10px;
+    line-height: 1.76;
+  }
+  @media screen and (min-width: $desktop) {
+    max-width: 500px;
+    font-size: 12px;
+    line-height: 1.76;
   }
 }
