add scss for nav-menu

--- a/src/sass/components/_hero-header.scss
+++ b/src/sass/components/_hero-header.scss
@@ -3,6 +3,8 @@
   width: 100%;
   background-color: transparent;
   top: 0;
+  left:0;
+  z-index: 500;
 }
 
 .header-container {
@@ -10,7 +12,8 @@
   justify-content: center;
   align-items: center;
   padding-top: 6px;
-  padding-left: 20px;
+  margin: 0 auto;
+  // padding-left: 20px;
   @media screen and (min-width: $tablet) {
     padding-top: 37px;
     padding-left: 34px;
@@ -18,6 +21,32 @@
   @media screen and (min-width: $desktop) {
     padding-left: 46px;
   }
+}
+
+.header-nav{
+  display:flex;
+    align-items: center;
+//   @media screen and (max-width: $desktop){
+
+// display: none;
+//   }
+}
+
+.nav-menu__list{
+  display: flex;
+  @media screen and (max-width: $tablet){
+
+    display: none;
+  }
+}
+.nav-menu__link{
+  position: relative;
+  padding-top: 50px;
+  font-family: DM Sans;
+font-style: normal;
+font-weight: 700;
+font-size: 16px;
+line-height: 1.3px;
 }
 
 .mobile-wrap {
@@ -30,6 +59,7 @@
 .hero {
   background-color: rgba(255, 184, 202, 1);
 }
+
 
 .hero__right-part {
   background-color: #ffb8ca;
