--- a/src/sass/components/_about-modal.scss
+++ b/src/sass/components/_about-modal.scss
@@ -17,6 +17,8 @@
 .about-modal {
   position: absolute;
   overflow-y: auto;
+  height: calc(100vh - 30px);
+  width: calc(100vw - 30px);
   background-color: $background-pink;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -27,15 +29,12 @@
   padding: 40px;
   @media screen and (min-width: 480px) {
     width: 450px;
-    height: calc(100% - 30px);
   }
   @media screen and (min-width: 768px) {
     width: 620px;
-    height: calc(100% - 30px);
   }
   @media screen and (min-width: 1200px) {
     width: 720px;
-    height: calc(100% - 30px);
   }
 }
 
