--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -1,6 +1,6 @@
 <p>hero-header section</p>
-<header class="header">
-  <div class="header-container container">
+<!-- <header class="header">
+  <div class="header-container container"> -->
     <nav class="header-nav">
       <a class="logo" href=""
         ><img src="./images/hero-header/logo.png" alt="лого" width="200" height="50"
@@ -17,8 +17,8 @@
       </nav>
     </nav>
 
-    <!-- -------start mobile-menu------ -->
-    <div class="mobile-wrap">
+    -------start mobile-menu------
+    <!-- <div class="mobile-wrap">
       <button type="button" class="menu-button" open-menu>
         <svg class="menu-button__icon" width="20" height="12">
           <use href=""></use>
@@ -42,9 +42,9 @@
           </ul>
         </nav>
       </div>
-    </div>
+    </div> -->
     <!-- ---------end mobile-menu-------- -->
-  </div>
+  <!-- </div>
 </header>
 <section class="hero-section">
   <h2 class="hero__title">
@@ -100,4 +100,4 @@
       <img class="hero__girl-img" src="images/hero-header/girl-tablet@x1.png" alt="дівчина"
     /></picture>
   </div>
-</section>
+</section> -->
