--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -1,66 +1,221 @@
+.section {
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 120px;
+  padding-bottom: 98px;
+  background-color: $background-white;
+  @media screen and (min-width: $desktop) {
+    display: grid;
+    justify-content: center;
+  }
+}
+
+.addmargin {
+  margin-bottom: 144px;
+  font-style: normal;
+  font-size: 34px;
+  line-height: 39px;
+  text-align: center;
+  letter-spacing: 0.04em;
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 180px;
+
+    font-size: 48px;
+    line-height: 55px;
+    letter-spacing: 0.04em;
+  }
+  @media screen and (min-width: 1280px) {
+    margin-bottom: 250px;
+    font-size: 58px;
+    line-height: 66px;
+    letter-spacing: 0.06em;
+  }
+}
+
+.text-products {
+  display: block;
+  margin-bottom: 15px;
+  font-family: 'Titan One', cursive;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21px;
+
+  text-align: center;
+  text-transform: uppercase;
+
+  color: $text-color-pink;
+  @media screen and (min-width: 768px) {
+    font-size: 26px;
+    line-height: 30px;
+    letter-spacing: 0em;
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 30px;
+    line-height: 34px;
+    letter-spacing: 0.04em;
+  }
+  &.decor {
+    color: $text-color-white;
+    font-size: 25px;
+    font-weight: 700;
+    line-height: 1;
+    margin-bottom: 30px;
+    letter-spacing: 5px;
+  }
+}
 .products {
- &__name{
-    color:red;
+  @media screen and (min-width: $tablet) {
+    display: flex;
+  }
+  @media screen and (min-width: $desktop) {
+    display: flex;
+  }
+  &__name {
+    margin-bottom: 20px;
+    font-family: 'Titan One', cursive;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 1.15;
 
-    &:after{
-        background-image: url('../images/product-section-image/dots.png');
-        display: block;
-        width: 26px;
-        height:6px;
-        content: '';
-        background-repeat: no-repeat;
-        background-position: center;
-    }
-    }
- }
+    text-align: center;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
 
- .cream {
-     background-color: #FFB8CA;
-    &:before {
-        background-image: url('../images/product-section-image/icecream.png');
-        display: block;
-        width: 335px;
-        height: 335px;
-        content: '';
-        background-repeat: no-repeat;
-        background-position: center;
+    color: $text-color-white;
+
+    @media screen and (min-width: $desktop) {
+      font-size: 30px;
+      line-height: 1.13;
+      letter-spacing: 0.04em;
     }
-    
-    
+  }
+
+  &__description {
+    display: block;
+    margin-bottom: 30px;
+    padding: 0px 40px;
+    text-align: center;
+    font-family: 400;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+
+    color: $text-color-white;
+    @media screen and (min-width: $tablet) {
+      height: 124px;
+      margin-bottom: 40px;
+      padding: 0px 20px;
+      line-height: 1.8;
+      overflow: hidden;
+    }
+    @media screen and (min-width: $desktop) {
+      height: 106px;
+      margin-bottom: 62px;
+      padding: 0px 44px;
+      font-size: 16px;
+      line-height: 1.7;
+      letter-spacing: 0.04em;
+      overflow: hidden;
+    }
+  }
 }
 
- .coffee {
-        background-color: #F0D1A5;
-            &:before {
-                background-image: url('../images/product-section-image/icecoffee.png');
-                display: block;
-                width: 335px;
-                height: 335px;
-                content: '';
-                background-repeat: no-repeat;
-                background-position: center;
-            }
-}
+.products__item {
+  width: 100%;
+  padding: 0px 0px 40px;
+  border-radius: 15px;
+  margin-bottom: 150px;
 
+  &:last-child {
+    margin-bottom: 0px;
+  }
 
- .milk {
-     background-color: #C2E297;
-  &:before {
-        background-image: url('../images/product-section-image/milkshakes.png');
-        display: block;
-        width: 335px;
-        height: 335px;
-        content: '';
-        background-repeat: no-repeat;
-        background-position: center;
+  @media screen and (min-width: $mobile) {
+    width: 280px;
+  }
+  @media screen and (min-width: $tablet) {
+    width: 220px;
+    margin-right: 20px;
+    margin-bottom: 0px;
+    padding: 0px 0px 40px;
+
+    &:last-child {
+      margin-right: 0px;
     }
+  }
+  @media screen and (min-width: $desktop) {
+    width: 335px;
+    margin-right: 23px;
+    margin-bottom: 0px;
+    padding: 0px 0px 40px;
+
+    &:last-child {
+      margin-right: 0px;
+    }
+  }
+
+  &.ice-cream {
+    background-color: #ffa5ba;
+    box-shadow: 0px 6px 6px rgba(255, 165, 186, 0.45);
+  }
+  &.ice-coffee {
+    background-color: #f0d1a5;
+    box-shadow: 0px 6px 6px rgba(240, 209, 165, 0.45);
+  }
+  &.milkshakes {
+    background-color: #c2e297;
+    box-shadow: 0px 6px 6px rgba(194, 226, 151, 0.45);
+  }
+}
+.products-images {
+  display: inline-block;
+  width: 100%;
+  margin-top: -225px;
+  margin-bottom: 38px;
+  @media screen and (min-width: 0px) and (max-width: 768px) {
+    margin-top: -130px;
+    margin-bottom: 22px;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1280px) {
+    max-width: 220px;
+    width: 220px;
+    height: 224px;
+    margin-top: -140px;
+    margin-bottom: 22px;
+  }
+
+  transition: scale 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
- 
+.about-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  margin-right: auto;
+  margin-left: auto;
 
- 
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  border: none;
+  border-radius: 50%;
+  fill: #c7133e;
+  background-color: $text-color-white;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-
-
-
-
+  &:hover,
+  &:focus {
+    background-color: #ecebeb;
+    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+  }
+}
