--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -1,103 +1,78 @@
-<p>hero-header section</p>
-<!-- <header class="header">
-  <div class="header-container container"> -->
-    <nav class="header-nav">
-      <a class="logo" href=""
-        ><img src="./images/hero-header/logo.png" alt="лого" width="200" height="50"
-      /></a>
-      <nav>
-        <button type="button" data-modal-open class="button--white">Buy now</button>
-        <ul class="nav-menu__list">
-          <li class="nav-menu__item"><a href="" class="mobile-menu__link current">Home</a></li>
-          <li class="nav-menu__item"><a href="" class="mobile-menu__link">About us</a></li>
-          <li class="nav-menu__item"><a href="" class="mobile-menu__link">How's made?</a></li>
-          <li class="nav-menu__item"><a href="" class="mobile-menu__link">Our products</a></li>
-          <li class="nav-menu__item"><a href="" class="mobile-menu__link">Contact</a></li>
-        </ul>
-      </nav>
+<header class="header">
+  <div class="header__wrapper container">
+    <a class="header__logo" href="./index.html">
+      <img src="images/hero-header/logo.png" alt="логотип сайта" />
+    </a>
+
+    <nav class="header__nav">
+      <ul class="header__navlist">
+        <li class="header__nav-item">
+          <a class="header__nav-link href="./index.html">Home</a>
+        </li>
+        <li class="header__nav-item">
+          <a class="header__nav-link" href="./index.html">About us</a>
+        </li>
+        <li class="header__nav-item">
+          <a class="header__nav-link" href="./index.html">How it’s made?</a>
+        </li>
+        <li class="header__nav-item">
+          <a class="header__nav-link" href="./index.html">Our products</a>
+        </li>
+        <li class="header__nav-item">
+          <a class="header__nav-link" href="./index.html">Contact</a>
+        </li>
+      </ul>
     </nav>
-
-    -------start mobile-menu------
-    <!-- <div class="mobile-wrap">
-      <button type="button" class="menu-button" open-menu>
-        <svg class="menu-button__icon" width="20" height="12">
-          <use href=""></use>
-        </svg>
-      </button>
-
-      <div class="mobile-menu" menu-container>
-        <button class="close-button" close-menu>
-          <svg class="close-button__icon" width="14" height="14">
-            <use href=""></use>
-          </svg>
-        </button>
-        <nav>
-          <button type="button" data-modal-open class="button--white">Buy now</button>
-          <ul class="mobile-menu__list">
-            <li class="mobile-menu__item"><a href="" class="mobile-menu__link current">Home</a></li>
-            <li class="mobile-menu__item"><a href="" class="mobile-menu__link">About us</a></li>
-            <li class="mobile-menu__item"><a href="" class="mobile-menu__link">How's made?</a></li>
-            <li class="mobile-menu__item"><a href="" class="mobile-menu__link">Our products</a></li>
-            <li class="mobile-menu__item"><a href="" class="mobile-menu__link">Contact</a></li>
-          </ul>
-        </nav>
-      </div>
-    </div> -->
-    <!-- ---------end mobile-menu-------- -->
-  <!-- </div>
-</header>
-<section class="hero-section">
-  <h2 class="hero__title">
-    ice cream <br />
-    <span class="hero__title__part"> passion</span>
-  </h2>
-  <ul class="button">
-    <li class="button__item">
-      <a class="button__link" href="">Products</a>
-    </li>
-    <li class="item">
-      <a class="button__link" href="">How's made?</a>
-    </li>
-  </ul>
-  <div class="hero__right-part">
-    <div class="hero__numbers">
-      <div class="hero__number-cafes">
-        <h4 class="hero__number">16</h4>
-        <p class="hero__cafes">cafes</p>
-      </div>
-      <div class="hero__number-food">
-        <h4 class="hero__number">23</h4>
-        <p class="hero__cafes">food-trucks</p>
-      </div>
-    </div>
-    <picture class="hero__girl-picture">
-      <source
-        media="(min-width: 1280px)"
-        srcset="
-          images/hero-header/girl-desktop@x1.webp 1x,
-          images/hero-header/girl-desktop@x2.webp 2x
-        "
-        type="image/webp" />
-      <source
-        media="(min-width: 1280px)"
-        srcset="
-          images/hero-header/girl-desktop@x1.png 1x,
-          images/hero-header/girl-desktop@x2.png 2x
-        " />
-      <source
-        media="(min-width: 768px)"
-        srcset="
-          images/hero-header/girl-tablet@x1.webp 1x,
-          images/hero-header/girl-tablet@x2.webp 2x
-        "
-        type="image/webp" />
-      <source
-        media="(min-width: 768px)"
-        srcset="
-          images/hero-header/girl-tablet@x2.png 1x,
-          images/hero-header/girl-tablet@x2.png 2x
-        " />
-      <img class="hero__girl-img" src="images/hero-header/girl-tablet@x1.png" alt="дівчина"
-    /></picture>
+    <button type="button" class="about__btn hero__header-button">
+      Read more
+      <svg class="about__btn-icon" width="6" height="10">
+        <use href="images/sprites.svg#icon-right"></use>
+      </svg>
+    </button>
   </div>
-</section> -->
+</header>
+<section class="section section__hero">
+  <!-- <div class="container">
+    <div class="hero__right-part">
+      <div class="hero__numbers">
+        <div class="hero__number-cafes">
+          <h4 class="hero__number">16</h4>
+          <p class="hero__cafes">cafes</p>
+        </div>
+        <div class="hero__number-food">
+          <h4 class="hero__number">23</h4>
+          <p class="hero__cafes">food-trucks</p>
+        </div>
+      </div>
+      <picture class="hero__girl-picture">
+        <source
+          media="(min-width: 1280px)"
+          srcset="
+            images/hero-header/girl-desktop@x1.webp 1x,
+            images/hero-header/girl-desktop@x2.webp 2x
+          "
+          type="image/webp" />
+        <source
+          media="(min-width: 1280px)"
+          srcset="
+            images/hero-header/girl-desktop@x1.png 1x,
+            images/hero-header/girl-desktop@x2.png 2x
+          " />
+        <source
+          media="(min-width: 768px)"
+          srcset="
+            images/hero-header/girl-tablet@x1.webp 1x,
+            images/hero-header/girl-tablet@x2.webp 2x
+          "
+          type="image/webp" />
+        <source
+          media="(min-width: 768px)"
+          srcset="
+            images/hero-header/girl-tablet@x2.png 1x,
+            images/hero-header/girl-tablet@x2.png 2x
+          " />
+        <img class="hero__girl-img" src="images/hero-header/girl-tablet@x1.png" alt="дівчина"
+      /></picture>
+    </div>
+  </div> -->
+</section>
