add anchors to navigation

--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -7,24 +7,24 @@
     <nav class="header__nav">
       <ul class="header__navlist">
         <li class="header__nav-item">
-          <a class="header__nav-link href="./index.html">Home</a>
+          <a class="header__nav-link" href="./index.html">Home</a>
         </li>
         <li class="header__nav-item">
-          <a class="header__nav-link" href="./index.html">About us</a>
+          <a class="header__nav-link" href="#about">About us</a>
         </li>
         <li class="header__nav-item">
-          <a class="header__nav-link" href="./index.html">How it’s made?</a>
+          <a class="header__nav-link" href="#about">How it’s made?</a>
         </li>
         <li class="header__nav-item">
-          <a class="header__nav-link" href="./index.html">Our products</a>
+          <a class="header__nav-link" href="#products">Our products</a>
         </li>
         <li class="header__nav-item">
-          <a class="header__nav-link" href="./index.html">Contact</a>
+          <a class="header__nav-link" href="#contacts">Contact</a>
         </li>
       </ul>
     </nav>
-    <button type="button" class="about__btn hero__header-button">
-      Read more
+    <button type="button" class="button--white button__hero">
+      Buy now
       <svg class="about__btn-icon" width="6" height="10">
         <use href="images/sprites.svg#icon-right"></use>
       </svg>
