--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="about">
+<section class="about" id="about">
   <div class="about__block container">
     <p class="section__label">tradition and love</p>
     <h2 class="section__title">how it’s made?</h2>
