--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -50,7 +50,6 @@
 }
 
 .button__about {
-  align-self: center;
   margin-left: auto;
   margin-right: auto;
   color: $text-color-red;
@@ -65,11 +64,29 @@
   @media screen and (min-width: $tablet) {
     font-size: 16px;
     line-height: 1.31;
-    margin-top: 60px;
+    margin-left: 0;
+  }
+}
+
+.button__hero {
+  align-self: center;
+
+  color: $text-color-red;
+  background-color: $background-white;
+  &:hover {
+    background-color: $hover-grey;
+  }
+  .about__btn-icon {
+    margin-left: 14px;
+    fill: $text-color-red;
+  }
+  @media screen and (min-width: $tablet) {
+    font-size: 16px;
+    line-height: 1.31;
+
     margin-left: 0;
   }
   @media screen and (min-width: $desktop) {
-    margin-top: 45px;
   }
 }
 
