--- a/src/sass/components/_hero-header.scss
+++ b/src/sass/components/_hero-header.scss
@@ -16,6 +16,10 @@
 
 .header__nav {
   display: flex;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: calc(21 / 16);
 }
 
 .header__navlist {
@@ -35,10 +39,11 @@
   margin-right: 35px;
 }
 
-.about__btn.hero__header-button {
+.hero__button {
   margin: 0;
-  background-color: $text-color-red;
-  color: $text-color-white;
+  padding: 0;
+  background-color: $text-color-white;
+  color: $text-color-red;
 }
 
 .mobile-wrap {
