--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -77,7 +77,7 @@
     <picture class="about__picture">
       <source srcset="images/about-images/hand-made.webp" type="image/webp" />
       <source srcset="images/about-images/hand-made.jpg" />
-      <img class="about__img-modal" src="images/about-images/cow-mobile@1x.png" alt="корова и молоко"
+      <img class="about__img-modal" src="images/about-images/hand-made.jpg" alt="дояр"
     /></picture>
       <p class="about__text-modal">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum dolorem minima consequuntur iusto commodi minus nesciunt odit, autem qui inventore omnis vel quis placeat, explicabo ab. Doloremque aperiam atque sapiente.
