--- a/src/sass/components/_about-modal.scss
+++ b/src/sass/components/_about-modal.scss
@@ -4,6 +4,8 @@
   width: 100vw;
   height: 100vh;
   background: rgba(0, 0, 0, 0.2);
+  position: fixed;
+  z-index: 100;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -16,7 +18,7 @@
 
 .about-modal {
   position: absolute;
-  overflow-y: auto;
+  overflow: scroll;
   height: calc(100vh - 30px);
   width: calc(100vw - 30px);
   background-color: $background-pink;
