--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,8 +1,7 @@
 <section class="reviews-section">
   <div class="container">
     <h2 class="visually-hidden">Customer reviews</h2>
-    <ul class="reviews-set">
-      <li class="reviews-list">
+    
         <article>
         <div class="customer-photo">
           <picture>
@@ -13,56 +12,20 @@
             />
           </picture>
         </div>
+        
+
+
+        <div class="review-text__block">
         <p class="review-text"><span class="review-gradient">
           Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit
           nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</span>
         </p> 
+        </div>
         <h3 class="customer-info">Emily, Los Angeles</h3>
         <svg class="review-icon" width="73" height="12">
           <use href="images/sprites.svg#icon-hr-dots-first"></use>
         </svg>
         </article>
-      </li>
-   <!-- Заготовка под слайдер    
-
-      <li class="reviews-list">
-        <article>
-          <div class="customer-photo">
-            <picture>
-              <img class="customer-icon" srcset="images/customer/customer2-1x.jpg 1x, images/customer/customer2-2x.jpg 2x"
-                src="images/customer/customer2-1x.jpg" alt="фотография покупателя" />
-            </picture>
-          </div>
-          <p class="review-text"><span class="review-gradient">
-              Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit
-              nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</span>
-          </p>
-          <h3 class="customer-info">Emily, Los Angeles</h3>
-          <svg class="review-icon" width="73" height="12">
-            <use href="images/sprites.svg#icon-hr-dots-first"></use>
-          </svg>
-        </article>
-      </li>
-
-      <li class="reviews-list">
-        <article>
-          <div class="customer-photo">
-            <picture>
-              <img class="customer-icon" srcset="images/customer/customer3-1x.jpg 1x, images/customer/customer3-2x.jpg 2x"
-                src="images/customer/customer3-1x.jpg" alt="фотография покупателя" />
-            </picture>
-          </div>
-          <p class="review-text"><span class="review-gradient">
-              Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit
-              nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</span>
-          </p>
-          <h3 class="customer-info">Emily, Los Angeles</h3>
-          <svg class="review-icon" width="73" height="12">
-            <use href="images/sprites.svg#icon-hr-dots-first"></use>
-          </svg>
-        </article>
-      </li>
-
-    </ul> -->
+  
   </div>
 </section>
