--- a/src/sass/components/_customer-reviews.scss
+++ b/src/sass/components/_customer-reviews.scss
@@ -27,14 +27,21 @@
 }
 }
 
+
+
+
 .review-text{
+  
   display: block;
   font-size: 12px;
   line-height: 2.55;
   text-align: center;
+ 
   background-color: #FAFAFA;
+  position: relative;
   
-  
+  z-index: 1;
+
 
   padding-top: 41px;
   padding-right: 61px;
@@ -79,13 +86,15 @@
   position: absolute;
   top: 25px;
   left: 65px;
+  z-index: -1;
 
   width: 54px;
   height: 40px;
   
   background-image: url("../images/customer/commapng.png");
   background-repeat: no-repeat;
-  opacity: 0.7;
+  
+  
 
   @media screen and (min-width: $tablet) {
   top: 30px;
@@ -108,8 +117,7 @@
 
   width: 32px;
   height: 4px;
-
-
+  
   margin-bottom: 18px;
 
   background-image: url("../images/customer/dots.png");
@@ -126,7 +134,7 @@
 }
 
 .review-gradient{
-  // background: linear-gradient(to right, #E1E1E1 50%, transparent 50%);
+  
   display: inline;
   background: linear-gradient(to right, #E1E1E1, #E1E1E1 100%);
   background-position: 0 100%;
@@ -148,6 +156,10 @@
     font-size: 20px;
   }
 }
+
+
+
+
 .review-icon{
   display: block;
   margin-left: auto;
