--- a/src/sass/components/_about-modal.scss
+++ b/src/sass/components/_about-modal.scss
@@ -1,11 +1,12 @@
 .backdrop {
   position: fixed;
-  overflow-y: scroll;
+  overflow: scroll;
   width: 100vw;
   height: 100vh;
   background: rgba(0, 0, 0, 0.2);
   position: fixed;
   z-index: 100;
+  top: 0;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
