add variables for animation, add button burger, add adaptive for header

--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -4,6 +4,24 @@
       <img src="images/hero-header/logo.png" alt="логотип сайта" />
     </a>
 
+    <!-- burger mobile button -->
+    <button
+      type="button"
+      aria-expanded="false"
+      aria-controls="mobile-menu-container"
+      class="mobile-button js-open-menu"
+    >
+      <svg
+        width="40"
+        height="40"
+        class="icon-menu"
+        aria-label="Переключатель
+            мобильного меню"
+      >
+        <use class="mobile-button__icon--burger" href="./images/sprites.svg#icon-burger"></use>
+      </svg>
+    </button>
+
     <nav class="header__nav">
       <ul class="header__navlist">
         <li class="header__nav-item">
