--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -98,3 +98,49 @@
 //             <use href="images/sprites.svg#icon-right"></use>
 //           </svg>
 //         </button>
+
+.mobile-button {
+  width: 40px;
+  height: 40px;
+
+  padding: 0;
+  display: block;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+
+  @media screen and (min-width: $tablet) {
+    margin-left: auto;
+    margin-right: 30px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    display: none;
+  }
+
+  &__icon--burger {
+    fill: $text-color-red;
+    transition: $fill-transition-250ms;
+  }
+
+  &:hover .mobile-button__icon--burger,
+  &:focus .mobile-button__icon--burger {
+    fill: $text-color-red;
+  }
+
+  &:hover .close-menu__icon,
+  &:focus .close-menu__icon {
+    fill: $text-color-white;
+  }
+}
+
+.close-menu__icon {
+  fill: currentColor;
+  transition: $fill-transition-250ms;
+}
+
+.close-menu {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+}
