--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,6 +14,7 @@
 @import './components/section';
 @import './components/button';
 @import './components/container';
+@import './components/mobile-menu';
 @import './components/hero-header';
 @import './components/products';
 @import './components/about';
