--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,7 +15,8 @@
 @import './components/button';
 @import './components/container';
 @import './components/mobile-menu';
-@import './components/hero-header';
+@import './components/header';
+@import './components/hero';
 @import './components/products';
 @import './components/about';
 @import './components/advantages';
