add masonry gallery

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,37 +1,66 @@
 <section class="gallery">
     <h2 class="visually-hidden">Gallery</h2>
     <div class="container">
-        <picture class="gallery-picture">
-            <source media="(min-width: 1280px)" srcset="
-                images/gallery/gallerydesktop@webp.webp    1x,
-                images/gallery/gallerydesktop2x@webp.webp 2x
-                " type="image/webp">
-            <source media="(min-width: 1280px)" srcset="
-                images/gallery/gallerydesktop.jpg    1x,
-                images/gallery/gallerydesktop2x.jpg 2x
-                ">
-        
-            <source media="(min-width: 768px)" srcset="
-                images/gallery/gallerytablet@webp.webp    1x,
-                images/gallery/gallerytablet2x@webp.webp 2x
-                " type="image/webp">
-            <source media="(min-width: 768px)" srcset="
-                images/gallery/gallerytablet.jpg    1x,
-                images/gallery/gallerytablet2x.jpg 2x
-                ">
-        
-            <source media="(min-width: 320px)" srcset="
-                images/gallery/gallerymobile@webp.webp    1x,
-                images/gallery/gallerymobile2x@webp.webp 2x
-                " type="image/webp">
-            <source media="(min-width: 320px)" srcset="
-                images/gallery/gallerymobile.jpg    1x,
-                images/gallery/gallerymobile2x.jpg 2x
-                ">
-        
-            <img class="gallery-img" src="#" alt="gallery">
-        </picture>
+        <ul class="gallery__list">
+            <li class="gallery__item gallery__item-1">
+                <div class="gallery__thumb">
+                    <img class="gallery__img" src="images/gallery/1.png" alt="" />
+                </div>
+            </li>
+            <li class="gallery__item gallery__item-2">
+                <div class="gallery__thumb">
+                    <img class="gallery__img" src="images/gallery/2.png" alt="" />
+                </div>
+            </li>
+            <li class="gallery__item gallery__item-3">
+                <div class="gallery__thumb">
+                    <img class="gallery__img" src="images/gallery/3.png" alt="" />
+                </div>
+            </li>
+            <li class="gallery__item gallery__item-4">
+                <div class="gallery__thumb">
+                    <img class="gallery__img" src="images/gallery/4.png" alt="" />
+                </div>
+            </li>
+            <li class="gallery__item gallery__item-5">
+                <div class="gallery__thumb">
+                    <img class="gallery__img" src="images/gallery/5.png" alt="" />
+                </div>
+            </li>
+            <li class="gallery__item gallery__item-6">
+                <div class="gallery__thumb">
+                    <img class="gallery__img" src="images/gallery/6.png" alt="" />
+                </div>
+            </li>
+            <li class="gallery__item gallery__item-7">
+                <div class="gallery__thumb">
+                    <img class="gallery__img" src="images/gallery/7.png" alt="" />
+                </div>
+            </li>
+            <li class="gallery__item gallery__item-8">
+                <div class="gallery__thumb">
+                    <img class="gallery__img" src="images/gallery/8.png" alt="" />
+                </div>
+            </li>
+            <li class="gallery__item gallery__item-9">
+                <div class="gallery__thumb">
+                    <img class="gallery__img" src="images/gallery/9.png" />
+                </div>
+            </li>
+            <li class="gallery__item gallery__item-10">
+                <div class="gallery__thumb">
+                    <img class="gallery__img" src="images/gallery/10.png" alt="" />
+                </div>
+            </li>
+        </ul>
+
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"
+        integrity="sha512-WNLxfP/8cVYL9sj8Jnp6et0BkubLP31jhTG9vhL/F5uEZmg5wEzKoXp1kJslzPQWwPT1eyMiSxlKCgzHLOTOTQ=="
+        crossorigin="anonymous"></script>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js"></script>
 </section>
 
 
