убирает лишнюю разметку

--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -15,12 +15,12 @@
         
 
 
-        <div class="review-text__block">
-        <p class="review-text"><span class="review-gradient">
+        
+        <p class="review-text"><span class="review-text__gradient">
           Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit
           nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</span>
         </p> 
-        </div>
+        
         <h3 class="customer-info">Emily, Los Angeles</h3>
         <svg class="review-icon" width="73" height="12">
           <use href="images/sprites.svg#icon-hr-dots-first"></use>
