--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -1,5 +1,32 @@
 .contacts {
-  background: linear-gradient(to top, #fff5f6 88%, #ffffff 0%);
+  background: linear-gradient(to top, #fff5f6 92%, #ffffff 0%);
+  background-image: url(/images/contacts/contacts-min.png);
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    background-image: url('/images/contacts/contacts@2x.png');
+  }
+
+  @media screen and (max-width: $tablet-container) {
+    background-image: linear-gradient(to top, #fff5f6 93%, #ffffff 0%);
+    background-size: contain;
+    background-position: 50%;
+    background-repeat: no-repeat;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1279px) {
+    background-image: linear-gradient(to top, #fff5f6 86%, #ffffff 0%);
+    background-size: contain;
+    background-position: 50%;
+    background-repeat: no-repeat;
+  }
+
+  @media screen and (min-width: $desktop) {
+    background-image: url(/images/contacts/contacts-min.png),
+      linear-gradient(to top, #fff5f6 88%, #ffffff 0%);
+    background-size: contain;
+    background-position: 50%;
+    background-repeat: no-repeat;
+    padding-bottom: 165px;
+  }
 }
 
 .contacts__container {
