--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,12 +1,12 @@
 .header {
   position: absolute;
-  left: 50%;
-  top: 35px;
-  transform: translate(-50%, -50%);
+  top: 6px;
 
   @media screen and (min-width: $tablet) {
     position: absolute;
-    top: 55px;
+    top: 38px;
+    transform: translate(-50%, -50%);
+    left: 50%;
   }
 }
 
@@ -14,6 +14,20 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  width: 100vw;
+
+  @media screen and (min-width: $tablet) {
+    width: $tablet;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  @media screen and (min-width: $desktop) {
+    width: $desktop;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
 
 .header__logo {
@@ -21,6 +35,14 @@
 
   @media screen and (min-width: $desktop) {
     position: absolute;
+  }
+}
+
+.js-open-menu {
+  display: block;
+  margin-right: 20px;
+  @media screen and (min-width: $desktop) {
+    display: none;
   }
 }
 
@@ -40,18 +62,17 @@
 
 .header__navlist {
   @media screen and (min-width: $desktop) {
-    margin-left: 240px;
+    margin-left: 355px;
     display: flex;
   }
 }
 
 .header__nav-link {
   color: $text-color-white;
-}
-
-.header__nav-link:hover,
-.header__nav-link:focus {
-  color: $text-color-red;
+  &:hover,
+  &:focus {
+    color: $text-color-red;
+  }
 }
 
 .header__nav-item:not(:last-child) {
@@ -68,4 +89,34 @@
   @media screen and (min-width: $tablet) {
     display: block;
   }
+}
+
+// -------MODAL---------
+
+.modal__header {
+  position: absolute;
+  display: block;
+  width: 100vw;
+  height: 100vh;
+}
+
+.modal__btn-close {
+  position: absolute;
+  border: none;
+  background-color: transparent;
+  top: 23px;
+  right: 28px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  fill: currentColor;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    color: $text-color-red;
+  }
+}
+
+.modal__btn-close-icon {
 }
