--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -3,53 +3,53 @@
     <div class="container">
         <ul class="gallery__list">
             <li class="gallery__item gallery__item-1">
-                <div class="gallery__thumb">
-                    <img class="gallery__img" src="images/gallery/1.png" alt="" />
+                <div class="gallery__thumb card">
+                    <img class="gallery__img card__inner" src="images/gallery/1.png" alt="" />
                 </div>
             </li>
             <li class="gallery__item gallery__item-2">
-                <div class="gallery__thumb">
-                    <img class="gallery__img" src="images/gallery/2.png" alt="" />
+                <div class="gallery__thumb card">
+                    <img class="gallery__img card__inner" src="images/gallery/2.png" alt="" />
                 </div>
             </li>
             <li class="gallery__item gallery__item-3">
-                <div class="gallery__thumb">
-                    <img class="gallery__img" src="images/gallery/3.png" alt="" />
+                <div class="gallery__thumb card">
+                    <img class="gallery__img card__inner" src="images/gallery/3.png" alt="" />
                 </div>
             </li>
             <li class="gallery__item gallery__item-4">
-                <div class="gallery__thumb">
-                    <img class="gallery__img" src="images/gallery/4.png" alt="" />
+                <div class="gallery__thumb card">
+                    <img class="gallery__img card__inner" src="images/gallery/4.png" alt="" />
                 </div>
             </li>
             <li class="gallery__item gallery__item-5">
-                <div class="gallery__thumb">
-                    <img class="gallery__img" src="images/gallery/5.png" alt="" />
+                <div class="gallery__thumb card">
+                    <img class="gallery__img card__inner" src="images/gallery/5.png" alt="" />
                 </div>
             </li>
             <li class="gallery__item gallery__item-6">
-                <div class="gallery__thumb">
-                    <img class="gallery__img" src="images/gallery/6.png" alt="" />
+                <div class="gallery__thumb card">
+                    <img class="gallery__img card__inner" src="images/gallery/6.png" alt="" />
                 </div>
             </li>
             <li class="gallery__item gallery__item-7">
-                <div class="gallery__thumb">
-                    <img class="gallery__img" src="images/gallery/7.png" alt="" />
+                <div class="gallery__thumb card">
+                    <img class="gallery__img card__inner" src="images/gallery/7.png" alt="" />
                 </div>
             </li>
             <li class="gallery__item gallery__item-8">
-                <div class="gallery__thumb">
-                    <img class="gallery__img" src="images/gallery/8.png" alt="" />
+                <div class="gallery__thumb card">
+                    <img class="gallery__img card__inner" src="images/gallery/8.png" alt="" />
                 </div>
             </li>
             <li class="gallery__item gallery__item-9">
-                <div class="gallery__thumb">
-                    <img class="gallery__img" src="images/gallery/9.png" />
+                <div class="gallery__thumb card">
+                    <img class="gallery__img card__inner" src="images/gallery/9.png" />
                 </div>
             </li>
             <li class="gallery__item gallery__item-10">
-                <div class="gallery__thumb">
-                    <img class="gallery__img" src="images/gallery/10.png" alt="" />
+                <div class="gallery__thumb card">
+                    <img class="gallery__img card__inner" src="images/gallery/10.png" alt="" />
                 </div>
             </li>
         </ul>
@@ -61,6 +61,8 @@
         crossorigin="anonymous"></script>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js"></script>
+
+    <script src="./js/masorny.js"></script>
 </section>
 
 
