add mobile menu styles

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -50,22 +50,25 @@
       </svg>
     </button>
 
-    <!-- Modal MENU start -->
-    <div class="backdrop is-hidden" mobile-menu-container>
-      <div class="modal__header">
-        <button class="modal__btn-close" type="button" mobile-close-menu>
-          <svg class="modal__btn-close-icon" width="14" height="14">
-            <use href="images/sprites.svg#close"></use>
-          </svg>
-        </button>
-        <button type="button" class="button--white button__hero">
-          Buy now
-          <svg class="about__btn-icon" width="6" height="10">
-            <use href="images/sprites.svg#icon-right"></use>
-          </svg>
-        </button>
-      </div>
-    </div>
-    <!-- Modal MENU end -->
+    
   </div>
+
 </header>
+
+<!-- Modal MENU start -->
+<div class="backdrop is-hidden1" mobile-menu-container>
+  <div class="modal__header">
+    <button class="modal__btn-close" type="button" mobile-close-menu>
+      <svg class="modal__btn-close-icon" width="14" height="14">
+        <use href="images/sprites.svg#close"></use>
+      </svg>
+    </button>
+    <button type="button" class="button--white button__hero">
+      Buy now
+      <svg class="about__btn-icon" width="6" height="10">
+        <use href="images/sprites.svg#icon-right"></use>
+      </svg>
+    </button>
+  </div>
+</div>
+<!-- Modal MENU end -->
