--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -1,14 +1,210 @@
-.mobile-wrap {
+.section__hero {
+  padding-top: 150px;
+  height: 502px;
+  background-color: $background-hero;
+  background-image: url(/images/hero-header/cream-mobile@x1.png),
+    url(/images/hero-header/ellipse.png);
+  background-repeat: no-repeat;
+  background-position: bottom left 36vw, center left 15vw;
+  background-size: 171px, 346px;
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    background-image: url(/images/hero-header/cream-mobile@x2.png),
+      url(/images/hero-header/ellipse.png);
+  }
   @media screen and (min-width: $tablet) {
-    display: inline-flex;
-    align-items: center;
+    height: auto;
+    background-size: 143px, 323px;
+    background-position: bottom left 49vw, bottom 12vh left 40vw;
+    background-image: url(/images/hero-header/cream-tablet@x1.png),
+      url(/images/hero-header/ellipse.png);
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      background-image: url(/images/hero-header/cream-tablet@x2.png),
+        url(/images/hero-header/ellipse.png);
+    }
+  }
+  @media screen and (min-width: $desktop) {
+    background-size: 236px, 538px;
+    background-position: bottom left 46vw, bottom 11vh left 37vw;
+    background-image: url(/images/hero-header/cream-desktop@x1.png),
+      url(/images/hero-header/ellipse.png);
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      background-image: url(/images/hero-header/cream-desktop@x2.png),
+        url(/images/hero-header/ellipse.png);
+    }
   }
 }
 
-.section.section__hero {
-  padding: 0;
-  background-color: $background-hero;
-  height: 665px;
+.hero__conteiner {
+  display: flex;
+  justify-content: space-between;
+}
+
+.hero__title-block {
+  max-width: 218px;
+  @media screen and (min-width: $tablet) {
+    max-width: 162px;
+  }
+  @media screen and (min-width: $desktop) {
+    max-width: 277px;
+  }
+}
+
+.hero__title {
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 26px;
+  line-height: 1.15;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: $text-color-white;
+  margin-bottom: 20px;
+  .hero__title-span {
+    font-size: 48px;
+    line-height: 0.96;
+    color: $text-color-red;
+  }
+  @media screen and (min-width: $tablet) {
+    font-size: 22px;
+    line-height: 1.14;
+    .hero__title-span {
+      font-size: 34px;
+      line-height: 0.91;
+    }
+  }
+  @media screen and (min-width: $desktop) {
+    font-size: 38px;
+    line-height: 1.16;
+    .hero__title-span {
+      font-size: 58px;
+    }
+  }
+}
+
+.hero__btn-red {
+  display: inline-block;
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 8px;
+  line-height: 1.25;
+  align-items: center;
+  text-align: center;
+  color: $text-color-white;
+  background-color: $text-color-red;
+  border-radius: 20px;
+  border: none;
+  padding: 6px 15px;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:focus,
+  &:hover {
+    background: $hover-red;
+  }
+  @media screen and (min-width: $desktop) {
+    font-size: 14px;
+    line-height: 1.29;
+    padding: 11px 17px;
+  }
+}
+
+.hero__btn-white {
+  display: inline-block;
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 8px;
+  line-height: 1.25;
+  align-items: center;
+  text-align: center;
+  color: $text-color-red;
+  background-color: $background-white;
+  border-radius: 20px;
+  border: none;
+  padding: 6px 15px;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:focus,
+  &:hover {
+    background: $hover-grey;
+  }
+  @media screen and (min-width: $desktop) {
+    font-size: 14px;
+    line-height: 1.29;
+    padding: 11px 17px;
+  }
+}
+
+.hero__bio-block {
+  @media screen and (max-width: $tablet) {
+    display: none;
+  }
+  @media screen and (min-width: $tablet) {
+    display: flex;
+    margin-top: 12px;
+  }
+  @media screen and (min-width: $desktop) {
+    margin-top: 56px;
+  }
+}
+
+.hero__description {
+  @media screen and (min-width: $tablet) {
+    max-width: 135px;
+    margin-top: auto;
+  }
+  @media screen and (min-width: $desktop) {
+    max-width: 200px;
+  }
+}
+
+.hero__text {
+  @media screen and (min-width: $tablet) {
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 8px;
+    line-height: 1.5;
+    margin-bottom: 7px;
+    color: $text-color-white;
+  }
+  @media screen and (min-width: $desktop) {
+    font-size: 14px;
+    line-height: 1.4;
+    margin-bottom: 20px;
+  }
+}
+
+.hero__description-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 26px;
+  height: 26px;
+  margin-right: auto;
+  margin-bottom: 6px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  border: none;
+  border-radius: 100%;
+  cursor: pointer;
+  fill: $hover-red;
+  background-color: $text-color-white;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    background-color: $hover-grey;
+  }
+  @media screen and (min-width: $desktop) {
+    margin-bottom: 11px;
+  }
+}
+
+.hero__right-part {
+  @media screen and (max-width: $tablet) {
+    display: none;
+  }
 }
 
 .hero__numbers {
@@ -83,11 +279,5 @@
     font-size: 14px;
     line-height: 1.29;
     margin-right: 18px;
-  }
-}
-
-.hero__girl-img {
-  @media screen and (min-width: $tablet) {
-    margin-left: auto;
   }
 }
